# Shellmate

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  sm_test.py
docs/: agent_continuation.md  architecture.md  development_guide.md  usage_guide.md
shellmate/: __init__.py  main.py
shellmate/core/: agent.py  ai.py  config.py  context.py  customs.py  executor.py
shellmate/daemon/: __init__.py  hotkey.py
shellmate/tui/: __init__.py  popup.py  styles.css
shellmate/utils/: models.py
